k8s/apps/quizlabs/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: quizlabs
  namespace: quizlabs
spec:
  hostnames:
    - quizlabs.org
  parentRefs:
    - name: homelab-gateway
      namespace: platform
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: quiz-backend
          port: 5000
    - matches:
        - path:
            type: PathPrefix
            value: /socket.io
      backendRefs:
        - name: quiz-multiplayer
          port: 5001
    - backendRefs:
        - name: quiz-frontend
          port: 80
